[package]
name = "dxgi"
version = "0.1.6"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/dxgi-rs"
license = "MIT"
documentation = "https://docs.rs/dxgi/*/x86_64-pc-windows-msvc/dxgi/"
description = """
Provides a convenient, higher level wrapping of the DXGI APIs. Targetting dxgi 1.2 stuff
that works on Windows 7.
"""

[target.'cfg(windows)'.dependencies]
wio = "0.2.0"
num = "0.1.42"
boolinator = "2.4.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["dxgi1_2", "guiddef", "minwindef", "unknwnbase", "winbase", "windef", "winerror", "winnt"]

[target.'cfg(windows)'.dev-dependencies]
windows_dpi = "0.3"
