[package]
name = "dxgi"
version = "0.3.0-beta1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/dxgi-rs"
license = "MIT"
documentation = "https://docs.rs/dxgi"
description = """
Provides a convenient, higher level wrapping of the DXGI APIs. Targetting dxgi 1.2 stuff
that works on Windows 7.
"""
edition = "2018"
workspace = ".."

[target.'cfg(windows)'.dependencies]
wio = "0.2.0"
checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"
com-wrapper = "0.1.0"

[target.'cfg(windows)'.dependencies.dcommon]
version = "0.3.0-beta1"
path = "../dcommon"

[target.'cfg(windows)'.dependencies.math2d]
version = "0.3.0-beta1"
features = ["d2d"]
path = "../math2d"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "dxgi",
    "dxgi1_2",
    "dxgi1_3",
    "dxgi1_4",
    "dxgi1_5",
    "dxgi1_6",
    "guiddef",
    "libloaderapi",
    "minwindef",
    "unknwnbase",
    "winbase",
    "windef",
    "winerror",
    "winnt"
]

[target.'cfg(windows)'.dev-dependencies]
windows_dpi = "0.3"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
